welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: not found: value len
  val n:Int=len(nums)
            ^indexOfValue:11: error: type mismatch;
 found   : Unit
 required: Int
  if (cpt == 0){
  ^